<resources>
    <string name="app_name">Wise Quotes App</string>
    <string name="splash_text">\“QUOTES WILL\n COME HERE\”</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account">Create an account</string>
    <string name="your_name">YOUR NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="or_signup_with">Or Signup with</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="register">Register</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="keep_me_signed_in">Keep me signed in</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_login_with">Or Login with</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="login">Login</string>
    <string name="favorites">Favorites</string>
    <string name="select">Select</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="submit">Submit</string>
    <string name="otp">We have sent you a 4 digit One Time Password on this number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="choose_font_color">Choose Font Color</string>
    <string name="choose_font_size">Choose Font Size</string>
    <string name="choose_font">Choose Font</string>
    <string name="choose_background">Choose Background</string>
    <string name="apply">Apply</string>
    <string name="change_password">Change Password?</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="categories">Categories</string>
    <string name="authors">Authors</string>
</resources>