<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    android:backgroundTint="#B0CEF5"
    style="@style/DialogStyle"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginVertical="10dp"
            android:textColor="@color/blue_green_app"
            android:layout_gravity="center"
            android:text="@string/otp_verification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="18sp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/numberOTP"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_margin="10dp"
            android:textColor="@color/buttonColor"
            android:text="9871877325"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText" />

        <com.chaos.view.PinView
            android:id="@+id/OTPPinView"
            app:itemCount="4"
            app:itemRadius="10dp"
            app:itemSpacing="15dp"
            app:lineColor="@color/bright_green"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:itemBackground="@color/bright_green"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/timer"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/buttonColor"
            android:layout_margin="10dp"
            android:text="00:30"
            tools:ignore="HardcodedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitOTP"
            android:layout_width="150dp"
            android:layout_gravity="center"
            android:text="@string/submit"
            app:cornerRadius="8dp"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"
            android:padding="10dp"
            android:backgroundTint="@color/blue_green_app"
            android:layout_height="wrap_content" />

    </LinearLayout>

</androidx.cardview.widget.CardView>